syntax = "proto3";

option go_package = "github.com/opencord/voltha/protos/go/bbf_fiber";

package bbf_fiber;

message VOntaniConfigData {
    string parent_ref = 1;
    string expected_serial_number = 2;
    string expected_registration_id = 3;
    string preferred_chanpair = 4;
    string protection_chanpair = 5;
    uint32 upstream_channel_speed = 6;
    uint32 onu_id = 7;
}
